[gd_scene load_steps=5 format=3 uid="uid://c7j6h1ci77pb5"]

[ext_resource type="Script" path="res://scenes/boxes/abstract_weapon_box.gd" id="1_q5yco"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uqnbc"]
size = Vector2(20, 8)

[sub_resource type="Animation" id="Animation_c5ye0"]
resource_name = "breathing"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.25098, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7533v"]
_data = {
"breathing": SubResource("Animation_c5ye0")
}

[node name="AbstractWeaponBox" type="Area2D" groups=["weapon_boxes"]]
collision_layer = 4
script = ExtResource("1_q5yco")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_uqnbc")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -4)
scale = Vector2(0.5, 0.5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7533v")
}
autoplay = "breathing"

[node name="DisappearCooldownTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="DisappearCooldownTimer" to="." method="_on_disappear_cooldown_timer_timeout"]
